# stm32f405rg_template

./: .gitignore  CMakeLists.txt  FreeRTOSConfig.h  Makefile  README.md  mxproject_sample  startup_stm32f405xx.s  stm32f405rg_template.ioc
Core/Inc/: FreeRTOSConfig.h  app.h  main.h  spiflash.h
Core/Src/: app.c  main.c  spiflash.c
Drivers/FreeRTOS/: CMakeLists.txt  FreeRTOSConfig.h
Drivers/FreeRTOS/Source/include/: FreeRTOSConfig.h
cmake/: FindFreeRTOS.cmake
samples/: CMakeLists.txt
samples/static_tasks/: CMakeLists.txt  STM32F405RGTx_FLASH.ld  startup_stm32f405xx.s
samples/static_tasks/Inc/: FreeRTOSConfig.h  main.h  static_tasks.h  stm32f4xx_it.h
samples/static_tasks/Src/: main.c  main.cpp  static_tasks.c  stm32f4xx_it.c
test/: CMakeLists.txt
test/Src/: app_test_c.c
